fixed readability of robot theme and padding closer to the original

--- a/tgui/packages/tgui/styles/themes/ntos_rusty.scss
+++ b/tgui/packages/tgui/styles/themes/ntos_rusty.scss
@@ -4,14 +4,14 @@
  */
 
 .theme-ntos_rusty:root {
-  --color-base: hsl(110, 82.7%, 5%);
+  --color-base: hsl(110, 40%, 10%);
   --color-primary: hsl(110, 82.7%, 38.4%);
   --color-label: hsl(41, 81%, 52.5%);
   --color-good: hsl(109.9, 72.8%, 44.7%);
   --color-bad: hsl(0, 73%, 43.5%);
 
-  --background-color: hsl(106.7, 20%, 8.8%);
-  --base-gradient-spread: 0%;
+  --background-color: hsl(13, 20%, 9%);
+  --base-gradient-spread: 6;
 
   --notice-box-background: hsl(113, 74.7%, 29.4%);
 
